--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.7"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.21"
   }
 }
